--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "postcss-loader": "^0.8.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
-    "webpack": "^1.12.14",
-    "webpack-livereload-plugin": "^0.6.0"
+    "webpack": "^1.12.14"
   },
   "scripts": {
     "build": "webpack --progress --colors",
